biz buni uddaladik onasini emsin

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;uma_db;Username=admin;Password=securepassword123
-Jwt__Key=YourSecretKeyHere
+ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=uma_db;Username=admin;Password=securepassword123
+Jwt__Key=F+DU0G9uoA0v9xpoJmWEcqT+oUcJOSeSHjob64CcLEo=
 Jwt__Issuer=http://localhost:5062
 Jwt__Audience=http://localhost:5062
