--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5555;uma_db;Username=admin;Password=securepassword123"
+    "DefaultConnection": "${ConnectionStrings__DefaultConnection}"
   },
   "Jwt": {
     "Key": "${Jwt__Key}",
