--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM arm64v8/node:22-alpine3.21 AS build
+FROM node:22 AS build
 
 WORKDIR /app
 COPY . .
@@ -7,5 +7,5 @@ RUN npm i
 
 EXPOSE 5173
 
-ENTRYPOINT ["npm", "run", "dev", "--host", "0.0.0.0"]
+ENTRYPOINT ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
 
